docs/archive/0.10/api/c/value.md
---
layout: docu
title: Values
---

The value class represents a single value of any type.

## API Reference

<!-- This section is generated by scripts/generate_config_docs.py -->

<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">void</span> <a href="#dataminer_destroy_value"><span class="nf">dataminer_destroy_value</span></a>(<span class="kt">dataminer_value</span> *<span class="nv">value</span>);
<span class="kt">dataminer_value</span> <a href="#dataminer_create_varchar"><span class="nf">dataminer_create_varchar</span></a>(<span class="kt">const</span> <span class="kt">char</span> *<span class="nv">text</span>);
<span class="kt">dataminer_value</span> <a href="#dataminer_create_varchar_length"><span class="nf">dataminer_create_varchar_length</span></a>(<span class="kt">const</span> <span class="kt">char</span> *<span class="nv">text</span>, <span class="kt">idx_t</span> <span class="nv">length</span>);
<span class="kt">dataminer_value</span> <a href="#dataminer_create_int64"><span class="nf">dataminer_create_int64</span></a>(<span class="kt">int64_t</span> <span class="nv">val</span>);
<span class="kt">dataminer_value</span> <a href="#dataminer_create_struct_value"><span class="nf">dataminer_create_struct_value</span></a>(<span class="kt">dataminer_logical_type</span> <span class="nv">type</span>, <span class="kt">dataminer_value</span> *<span class="nv">values</span>);
<span class="kt">dataminer_value</span> <a href="#dataminer_create_list_value"><span class="nf">dataminer_create_list_value</span></a>(<span class="kt">dataminer_logical_type</span> <span class="nv">type</span>, <span class="kt">dataminer_value</span> *<span class="nv">values</span>, <span class="kt">idx_t</span> <span class="nv">value_count</span>);
<span class="kt">dataminer_value</span> <a href="#dataminer_create_array_value"><span class="nf">dataminer_create_array_value</span></a>(<span class="kt">dataminer_logical_type</span> <span class="nv">type</span>, <span class="kt">dataminer_value</span> *<span class="nv">values</span>, <span class="kt">idx_t</span> <span class="nv">value_count</span>);
<span class="kt">char</span> *<a href="#dataminer_get_varchar"><span class="nf">dataminer_get_varchar</span></a>(<span class="kt">dataminer_value</span> <span class="nv">value</span>);
<span class="kt">int64_t</span> <a href="#dataminer_get_int64"><span class="nf">dataminer_get_int64</span></a>(<span class="kt">dataminer_value</span> <span class="nv">value</span>);
</code></pre></div></div>

### `dataminer_destroy_value`

---
Destroys the value and de-allocates all memory allocated for that type.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">void</span> <span class="nv">dataminer_destroy_value</span>(<span class="nv">
</span>  <span class="kt">dataminer_value</span> *<span class="nv">value
</span>);
</code></pre></div></div>

#### Parameters

---
* `value`

The value to destroy.

<br>

### `dataminer_create_varchar`

---
Creates a value from a null-terminated string

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_value</span> <span class="nv">dataminer_create_varchar</span>(<span class="nv">
</span>  <span class="kt">const</span> <span class="kt">char</span> *<span class="nv">text
</span>);
</code></pre></div></div>

#### Parameters

---
* `value`

The null-terminated string
* `returns`

The value. This must be destroyed with `dataminer_destroy_value`.

<br>

### `dataminer_create_varchar_length`

---
Creates a value from a string

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_value</span> <span class="nv">dataminer_create_varchar_length</span>(<span class="nv">
</span>  <span class="kt">const</span> <span class="kt">char</span> *<span class="nv">text</span>,<span class="nv">
</span>  <span class="kt">idx_t</span> <span class="nv">length
</span>);
</code></pre></div></div>

#### Parameters

---
* `value`

The text
* `length`

The length of the text
* `returns`

The value. This must be destroyed with `dataminer_destroy_value`.

<br>

### `dataminer_create_int64`

---
Creates a value from an int64

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_value</span> <span class="nv">dataminer_create_int64</span>(<span class="nv">
</span>  <span class="kt">int64_t</span> <span class="nv">val
</span>);
</code></pre></div></div>

#### Parameters

---
* `value`

The bigint value
* `returns`

The value. This must be destroyed with `dataminer_destroy_value`.

<br>

### `dataminer_create_struct_value`

---
Creates a struct value from a type and an array of values

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_value</span> <span class="nv">dataminer_create_struct_value</span>(<span class="nv">
</span>  <span class="kt">dataminer_logical_type</span> <span class="nv">type</span>,<span class="nv">
</span>  <span class="kt">dataminer_value</span> *<span class="nv">values
</span>);
</code></pre></div></div>

#### Parameters

---
* `type`

The type of the struct
* `values`

The values for the struct fields
* `returns`

The value. This must be destroyed with `dataminer_destroy_value`.

<br>

### `dataminer_create_list_value`

---
Creates a list value from a type and an array of values of length `value_count`

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_value</span> <span class="nv">dataminer_create_list_value</span>(<span class="nv">
</span>  <span class="kt">dataminer_logical_type</span> <span class="nv">type</span>,<span class="nv">
</span>  <span class="kt">dataminer_value</span> *<span class="nv">values</span>,<span class="nv">
</span>  <span class="kt">idx_t</span> <span class="nv">value_count
</span>);
</code></pre></div></div>

#### Parameters

---
* `type`

The type of the list
* `values`

The values for the list
* `value_count`

The number of values in the list
* `returns`

The value. This must be destroyed with `dataminer_destroy_value`.

<br>

### `dataminer_create_array_value`

---
Creates a array value from a type and an array of values of length `value_count`

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">dataminer_value</span> <span class="nv">dataminer_create_array_value</span>(<span class="nv">
</span>  <span class="kt">dataminer_logical_type</span> <span class="nv">type</span>,<span class="nv">
</span>  <span class="kt">dataminer_value</span> *<span class="nv">values</span>,<span class="nv">
</span>  <span class="kt">idx_t</span> <span class="nv">value_count
</span>);
</code></pre></div></div>

#### Parameters

---
* `type`

The type of the array
* `values`

The values for the array
* `value_count`

The number of values in the array
* `returns`

The value. This must be destroyed with `dataminer_destroy_value`.

<br>

### `dataminer_get_varchar`

---
Obtains a string representation of the given value.
The result must be destroyed with `dataminer_free`.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">char</span> *<span class="nv">dataminer_get_varchar</span>(<span class="nv">
</span>  <span class="kt">dataminer_value</span> <span class="nv">value
</span>);
</code></pre></div></div>

#### Parameters

---
* `value`

The value
* `returns`

The string value. This must be destroyed with `dataminer_free`.

<br>

### `dataminer_get_int64`

---
Obtains an int64 of the given value.

#### Syntax

---
<div class="language-c highlighter-rouge"><div class="highlight"><pre class="highlight"><code><span class="kt">int64_t</span> <span class="nv">dataminer_get_int64</span>(<span class="nv">
</span>  <span class="kt">dataminer_value</span> <span class="nv">value
</span>);
</code></pre></div></div>

#### Parameters

---
* `value`

The value
* `returns`

The int64 value, or 0 if no conversion is possible

<br>